.metadata/.plugins/org.eclipse.cdt.ui/2020-10-22-E.build.log
21:00:22 **** Rebuild of configuration Debug for project 2020-10-22-E ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
..\main.cpp:23:2: error: expected ';' after class definition
 }
  ^
  ;
..\main.cpp: In constructor 'Tree::Tree(int)':
..\main.cpp:9:7: error: expected '(' before 'int'
   for int(i=0; i<N;)
       ^~~
       (
..\main.cpp:9:11: error: 'i' was not declared in this scope
   for int(i=0; i<N;)
           ^
..\main.cpp:10:2: error: expected primary-expression before '}' token
  }
  ^
..\main.cpp: In member function 'int Tree::Union(int)':
..\main.cpp:14:2: warning: no return statement in function returning non-void [-Wreturn-type]
  }
  ^
..\main.cpp: In function 'int main()':
..\main.cpp:48:2: error: 'tree' was not declared in this scope
  tree t(H*W);
  ^~~~
..\main.cpp:48:2: note: suggested alternative: 'Tree'
  tree t(H*W);
  ^~~~
  Tree
..\main.cpp:53:6: error: 't' was not declared in this scope
      t.union(i*W+j, (i-1)*W+j-1);
      ^
..\main.cpp:53:8: error: expected unqualified-id before 'union'
      t.union(i*W+j, (i-1)*W+j-1);
        ^~~~~
..\main.cpp:56:6: error: 't' was not declared in this scope
      t.union(i*W+j, (i-1)*W+j);
      ^
..\main.cpp:56:8: error: expected unqualified-id before 'union'
      t.union(i*W+j, (i-1)*W+j);
        ^~~~~
..\main.cpp:59:6: error: 't' was not declared in this scope
      t.union(i*W+j, (i-1)*W+j+1);
      ^
..\main.cpp:59:8: error: expected unqualified-id before 'union'
      t.union(i*W+j, (i-1)*W+j+1);
        ^~~~~
..\main.cpp:62:6: error: 't' was not declared in this scope
      t.union(i*W+j, i*W+j-1);
      ^
..\main.cpp:62:8: error: expected unqualified-id before 'union'
      t.union(i*W+j, i*W+j-1);
        ^~~~~

21:00:23 ビルドに失敗しました。13 errors, 1 warnings. (経過 966ms)

